--- a/css/style.css
+++ b/css/style.css
@@ -9,12 +9,12 @@
 			}
 			
 			footer{
-				height:200px;
+				height:100px;
 			}
 
 			section{
 				padding-top: 100px;
-				min-height:200px;
+				min-height:100px;
 			}
 
 			h1{
@@ -71,6 +71,11 @@
 			padding: 10px;
 			border: 1px solid #ccc;
 			}			
+
+			#alt {
+				font-weight: bold;
+				font-size: 1em;
+			}
 
 			
 /*.reveal{
